<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/team_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:text="@string/team_button" />

    <Button
        android:id="@+id/sudoku_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/team_button"
        android:layout_marginTop="26dp"
        android:text="@string/sudoku_button" />
    
    <Button
        android:id="@+id/boggle_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/sudoku_button"
        android:layout_marginTop="26dp"
        android:text="@string/boggle_button" />
    
    <Button
        android:id="@+id/persistent_boggle_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/boggle_button"
        android:layout_marginTop="26dp"
        android:text="@string/persistent_boggle_button" />

    <Button
        android:id="@+id/error_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/persistent_boggle_button"
        android:layout_marginTop="22dp"
        android:text="@string/error_button" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/error_button"
        android:layout_marginTop="23dp"
        android:text="@string/exit_button" />

</RelativeLayout>
